--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.0",
     "commit": "^0.0.4",
     "next": "15.5.2",
     "react": "19.1.0",
