--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
+
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
