--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "export": "next export",
-      "start": "next start"
-    },
-
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start"
+  },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.13.0",
     "commit": "^0.0.4",
+    "mongodb": "^6.19.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
