--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.13.0",
     "commit": "^0.0.4",
+    "dotenv": "^17.2.2",
     "mongodb": "^6.19.0",
     "next": "15.5.2",
     "react": "19.1.0",
