--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^5.13.0",
+    "@netlify/plugin-nextjs": "5.13.2",
     "commit": "^0.0.4",
     "dotenv": "^17.2.2",
     "mongodb": "^6.19.0",
