--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
   port = 3000
 
 [functions]
-  directory = "my-next-app/netlify/functions"
+  directory = "netlify/functions"
 
 [context.production.environment]
   MONGODB_URI = "mongodb+srv://smartdivyanshu123_db_user:MHA0cSdMEwRcuFq0@cluster0.hwdh190.mongodb.net/"
